Изменена структура проекта

--- a/PetSocialNetwork.Infrastructure.DataEntityFramework/PetSocialNetwork.Infrastructure.DataEntityFramework.csproj
+++ b/PetSocialNetwork.Infrastructure.DataEntityFramework/PetSocialNetwork.Infrastructure.DataEntityFramework.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>3c357089-26cb-4140-8e58-6b18893b53ff</UserSecretsId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +14,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PetSocialNetwork\PetSocialNetwork.csproj" />
   </ItemGroup>
 
 </Project>
