--- a/sources/PetSocialNetwork.API/PetSocialNetwork.API.csproj
+++ b/sources/PetSocialNetwork.API/PetSocialNetwork.API.csproj
@@ -26,4 +26,8 @@
     <_ContentIncludedByDefault Remove="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PetSocialNetwork.Data\PetSocialNetwork.Data.csproj" />
+  </ItemGroup>
+
 </Project>
