--- a/sources/PetSocialNetwork.API/appsettings.Development.json
+++ b/sources/PetSocialNetwork.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=PetSocialNetwork;Username=postgres;Password=1234",
+    "Default": "Server=localhost;Port=5432;User Id=postgres;Password=postgres;Database=PetSocialNetwork;"
   }
 }
