Добавлено автоматическое заполнение профиля при аутентификации

--- a/sources/AppSettings/appsettings.Development.json
+++ b/sources/AppSettings/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=PetSocialNetwork;Username=postgres;Password=1234"
+    "Default": "Host=localhost;Port=5432;Database=PetSocialNetwork;Username=postgres;Password=Postgres&Khristina93"
   }
 }
