Добалвена структура папок обработчиков

--- a/sources/PetSocialNetwork.API/PetSocialNetwork.API.csproj
+++ b/sources/PetSocialNetwork.API/PetSocialNetwork.API.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PetSocialNetwork.Data.Migrator\PetSocialNetwork.Data.Migrator.csproj" />
     <ProjectReference Include="..\PetSocialNetwork.Data\PetSocialNetwork.Data.csproj" />
   </ItemGroup>
 
