--- a/sources/PetSocialNetwork.NotificationService/PetSocialNetwork.NotificationService.csproj
+++ b/sources/PetSocialNetwork.NotificationService/PetSocialNetwork.NotificationService.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.8.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PetSocialNetwork.API\PetSocialNetwork.API.csproj" />
   </ItemGroup>
 
 </Project>
